<resources>
    <string name="app_name">login</string>
    <!--System-->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!--Login Fragment-->
    <string name="action_regist_new_account">Зарегистрироваться</string>
    <string name="action_sign_in_account">Войти</string>
    <string name="action_sign_in_short">Вход</string>
    <string name="prompt_email">Логин (электронная почта)</string>
    <string name="prompt_password">Пароль</string>
    <!--Registr Person Data Fragment-->
    <string name="your_surname">Ваша фамилия:</string>
    <string name="your_name">Ваше имя:</string>
    <string name="your_city">Город:</string>
    <string name="your_sex">Ваш пол:</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="your_bithday">День рождения:</string>
    <string name="your_birthday">День рождения:</string>
    <!--Utils-->
    <string name="loading">Загрузка...</string>
    <!--Drawler_Menu_Items-->
    <string name="menu_all_orders">Все заявки</string>
    <string name="menu_my_orders">Мои заявки</string>
    <string name="menu_call_to_dispatcher">Позвонить диспетчеру</string>
    <string name="menu_exit">Выйти</string>
    <string name="exit_question">При выходе из учетной записи из устройства будут удалены все связанные с ней данный.
    Продолжить?</string>
    <string name="menu_instruction">Инструкции</string>
    <string name="menu_help">Помощь</string>
    <!--Vacant_Orders_Menu_Items-->

    <string name="menu_orders_vacant_1">Ожидает оплаты</string>
    <string name="menu_orders_vacant_2">В работе</string>
    <string name="menu_orders_vacant_3">Выполнен</string>
    <string name="menu_orders_vacant_4">Отказ клиента</string>
    <!--UserOrdersList-->
    <string name="my_orders">Мои заказы</string>
    <!--VacantOrdersList-->
    <string name="vacant_orders">Вакантные заказы</string>
    <string name="cutom_toolbar_search">Поиск по заявкам...</string>
    <!--Fragment filtration-->
    <string name="filters_toolbar_title">Фильтры</string>
    <string name="filters_button_accept_lable">принять</string>
    <string name="accept">Применить</string>
    <string name="all_category">Все категории</string>
    <string name="category">Категории</string>
    <string name="cities">Города</string>
    <string name="take_order">Взять заказ</string>
    <string name="order_pay_comission">Оплатить комиссию</string>
    <string name="finish_order">Завершить</string>
    <string name="start_order">В работе</string>


    <string name="main_price">Price</string>
    <string name="main_buy">Buy</string>
    <string name="main_toolbar_title">Placing an order</string>
    <string name="main">Основное</string>
    <string name="profile_changed">Профиль успешно изменен</string>
    <string name="request_number">Заявка №%d</string>
    <string name="order_cant_take_something_goes_wrong">Заказ не может быть взят, что то пошло не так!</string>
    <string name="order_cant_be_taken">Заказ не может быть взят!</string>
    <string name="order_cant_take_other_user_get_it">Заказ не может быть взят, так как уже находится у другого исполнителя!</string>
    <string name="order_cant_take_limit_reached">Заказ не может быть взят, так как у вас достигнут лимит заказов!</string>
    <string name="order_status_is_allready_at_work">Заказ уже переведен в статус \"В РАБОТЕ\"!</string>
    <string name="order_status_is_allready_wait_pay">Заказ уже переведен в статус \"ОЖИДАЕТ ОПЛАТЫ\"!</string>
    <string name="commission_payed_seccussfully">Комиссия к заявке оплачена!</string>
    <string name="request">Заяква</string>
    <string name="oferts">Согласeн с условиями</string>
    <string name="get_order" >Вы действительно хотите взять заявку?</string>

    <string name="start_order_confirmation">Вы действительно хотите приступить к выполнению заявки?</string>
    <string name="accomplished_order_confirmation">Вы действительно хотите cдать заявку?</string>
    <string name="profile_chandging_confirmation">Вы действительно изменить данные профиля?</string>




    <string name="offerts_for_user">Оферта для исполнителей</string>
    <string name="telephoneNumber">Телефон: %s</string>
    <string name="help_number">+7 922 415-55-52</string>
    <string name="adress_html"><![CDATA[<b>Адресс: </b>]]></string>
    <string name="customer_html"><![CDATA[<b>Заказчик: </b>]]></string>
    <string name="date_html"><![CDATA[<b>Дата: </b>]]></string>
    <string name="order_comission">Комиссия по заявке № %d</string>

    <string name="order_end_part1"><![CDATA[Для завершения заявки <b><i>\"]]></string>
    <string name="order_end_part2">\" (№</string>
    <string name="order_end_part3"><![CDATA[)</i></b>]]></string>
    <string name="order_end_part4">, необходимо осуществить оплату комиссионных сборов</string>
    <string name="final_price"><font size="20">Окончательная цена</font></string>

    <string-array name="ordersCategory">
        <item>Назначен</item>
        <item>В работе</item>
        <item>Ожидает оплаты</item>
        <item>Выполнен</item>
        <item>Отказ клиента</item>
    </string-array>

    <string-array name="ordersCategoryId">
        <item>3</item>
        <item>8</item>
        <item>7</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
